--- a/index.html
+++ b/index.html
@@ -1,3 +1,30 @@
 ---
-layout: home
+layout: default
 ---
+
+<!-- Header -->
+<header>
+    <div class="container">
+        <div class="intro-text">
+            <div class="intro-heading">IndiQ Meetups<br></div>
+            <div class="intro-lead-in">Monthly quantum computing meetups across India</div>
+            <a href="#meetups" class="page-scroll btn btn-xl">Tell Me More</a>
+        </div>
+    </div>
+</header>
+
+<section id="meetups">
+    {% for post in site.posts %}
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
+            </div>
+        </div>
+        <div class="row container">
+
+                <center><a href="{{ site.baseurl }}{{ post.url }}" class="page-scroll btn btn-xl">Register Now</a></center>
+        </div>
+    </div>
+    {% endfor %}
+</section>
