--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@ layout: default
     {% for post in site.posts %}
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-sm-2">
+                <center><a href="{{ site.baseurl }}{{ post.url }}" class="page-scroll btn btn-xl">{{post.city}}</a></center>
+            </div>
+            <div class="col-sm-10 text-center">
                 <h2 class="section-heading"><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
             </div>
-        </div>
-        <div class="row container">
-
-                <center><a href="{{ site.baseurl }}{{ post.url }}" class="page-scroll btn btn-xl">Register Now</a></center>
         </div>
     </div>
     {% endfor %}
